// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDFExperience.vue matches experience snapshot 1`] = `
<section id="experience" class="resume-section ml-3 mt-2 mb-3">
  <div class="my-auto">
    <h4 class="heading heading-4" style="font-family: 'Saira Extra Condensed';">Experience</h4>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-4">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-4">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-4">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-4">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`PDFExperience.vue matches renderPDF experience snapshot 1`] = `
<section id="experience" class="resume-section-render ml-3 mt-2 mb-3">
  <div class="my-auto">
    <h4 class="heading heading-4" style="font-family: 'Saira Extra Condensed';">Experience</h4>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-1">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-1">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-1">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="d-flex flex-column justify-content-between">
      <div>
        <div class="d-flex flex-column justify-content-between">
          <div class="d-flex flex-row">
            <div class="mr-auto">
              <h5 id="job-position" class="heading heading-5 mb-0" style="font-family: 'Saira Extra Condensed';">sample position</h5>
            </div>
            <div class="resume-date text-md-right mr-1">
              <h6 class="heading heading-6 pdf-experience-dates text-primary" style="font-family: 'Saira Extra Condensed';">sample startDate - sample endDate</h6>
            </div>
          </div>
          <div class="d-flex flex-column">
            <h6 class="heading heading-6 pdf-company" style="font-family: 'Saira Extra Condensed';">sample company</h6>
            <div class="mb-2">
              <p class="job-1-description-1" style="font-family: 'Open Sans';">description part 1</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-2" style="font-family: 'Open Sans';">description part 2</p>
            </div>
            <div class="mb-2">
              <p class="job-1-description-3" style="font-family: 'Open Sans';">description part 3</p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
